codex-tests/snapshots/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:

  >_ Mightling (v<VERSION>)
     loading

  Pull up a prompt.
  Resuming session…

› draft while loading


after:

  >_ Mightling (v<VERSION>)
     loading

  Pull up a prompt.


› draft while loading


---
fork lookup fallback:
before:

  >_ Mightling (v<VERSION>)
     loading

  Pull up a prompt.
  Forking session…

› draft while loading


after:

  >_ Mightling (v<VERSION>)
     loading

  Pull up a prompt.


› draft while loading


---
resume picker cancellation:
before:
hidden while picker owns input
after:

  >_ Mightling (v<VERSION>)
     loading

  Pull up a prompt.


› Ask Mightling to do anything

  ? for shortcuts
---
fork picker cancellation:
before:
hidden while picker owns input
after:

  >_ Mightling (v<VERSION>)
     loading

  Pull up a prompt.


› Ask Mightling to do anything

  ? for shortcuts
